--- a/help/src/hid00102.htm
+++ b/help/src/hid00102.htm
@@ -158,7 +158,7 @@
 
     <dt>xxxx.INI</dt>
     <dd>
-      カレントが検索結果リストの場合、その検索設定を <a href="hid00005.htm#SaveAsFindSet">SaveAsFindSet</a> コマンドで保存できます。<br>
+      カレントが検索結果リストの場合、その検索設定(選択やリストファイルによるディレクトリ指定を含む)を <a href="hid00005.htm#SaveAsFindSet">SaveAsFindSet</a> コマンドで保存できます。<br>
       <b>検索設定ファイル</b>には、[<b>FindSettings</b>] セクションがあります。<br>
       保存したファイルは、<a href="hid00005.htm#LoadFindSet">LoadFindSet</a> コマンドで読み込んで検索を実行できます。<br>
     </dd>
