--- a/help/src/hid00109.htm
+++ b/help/src/hid00109.htm
@@ -37,6 +37,19 @@
   </div>
 
   <dl>
+    <dt>V16.16 <span class="ver_date">(2024-01-12)</span></dt>
+    <dd>
+      ・FindFileDlg コマンドのパラメータに * を指定すると、リストファイルの選択ダイアログが表示されるようにしました。<br>
+      ・文字列検索(GREP)/文字列置換/Git GREP で結果リスト以外にフォーカスがある場合、Ctrl+R で「正規表現」、Ctrl+U で「大小区別」、Ctrl+W で「単語」のチェック状態を切り替えられるようにしました。<br>
+      ・文字列検索(GREP)の検索文字列欄に、"&gt;フィルタ1[|フィルタ2...]&gt; 検索文字列"という書式でフィルタを指定することで、検索対象を絞り込めるようにしました(Grep2 では利用不可)。今のところ Head、Tail、HtmlHead、SubStr というフィルタを利用できます
+      (例: "&gt;Head(20)|SubStr(10,20)&gt; hoge"  先頭から20行で、10文字目から20文字の範囲を検索)。<br>
+      ・文字列検索(GREP)で、グループが設定された正規表現で検索を行った場合、結果リストでグループ部分の背景を強調背景色の補色で表示するようにしました(グループ1のみ)。<br>
+      ・Grep2 コマンドによる文字列検索でも中断(grep.exe を強制終了)できるようにしました。また、Git GREP でもESCキーで中断(git.exe を強制終了)できるようにしました。<br>
+      ・Grep2 で「正規表現」をチェックしていない場合、一部の記号がマッチしなかったのを修正。なお grep.exe はデフォルトで基本正規表現(BRE)となるため、メタキャラクタはエスケープして渡しています。<br>
+      ・Grep/Grep2 で行頭/行末マッチの検索を行った場合、行の途中にあるマッチ部分ではない語も強調表示されていたのを修正。<br>
+      ・タグ名検索(FindTagName)でキーワードを入力するとエラーが発生するようになっていたのを修正。<br>
+    </dd>
+
     <dt>V16.15 <span class="ver_date">(2024-01-08)</span></dt>
     <dd>
       ・ファイラーに SaveAsFindSet コマンドを追加。カレントが検索結果リストの場合、その検索設定に名前を付けて保存します。<br>
@@ -50,7 +63,7 @@
     <dt>V16.14 <span class="ver_date">(2024-01-03)</span></dt>
     <dd>
       ・文字列検索(GREP)/文字列置換で、誤操作しにくいようにアクティブな「置換」タブを「検索」タブの補色で表示するようにしました。また、[中断]ボタンを[開始]ボタンと兼ねるようにしました。検索中は[開始]が[中断]に変わります。<br>
-      ・文字列検索/置換およびGitGREP画面に「単語」オプションを追加。検索文字列は英単語境界でのみ一致します。<br>
+      ・文字列検索/置換および GitGREP 画面に「単語」オプションを追加。検索文字列は英単語境界でのみ一致します。<br>
       ・文字列検索/置換でカレントのファイルのみが選択中の場合、マスクやサブディレクトリの設定を隠し、代わりに選択ファイル数を強調表示するようにしました。<br>
       ・文字列検索/置換で、「ヒットしたカレントのファイルを選択」を、ファイラーで SelAllFile
       コマンドが割り当てられているキーでも行えるようにしました。また選択後の確認メッセージは出さないようにしました。なお、ファイル選択後、それらに対してさらに検索を行えなくなっていたのを修正。<br>
