--- a/help/src/hid00005.htm
+++ b/help/src/hid00005.htm
@@ -1494,7 +1494,7 @@ nyanfi_imgview.jpg 129,806 800 × 600  (4 : 3)
         ToOppSameHash</a>　<a href="#SelSameDir">→ SelSameDir</a>
     </dd>
 
-    <dt id="FindFileDlg">FindFileDlg<span class="pram_text">[_{NM|FK}][;R{0|1}][;X{0|1}][;A{0|1}][;NT][;リストファイル名]</span>
+    <dt id="FindFileDlg">FindFileDlg<span class="pram_text">[_{NM|FK}][;R{0|1}][;X{0|1}][;A{0|1}][;NT][;リストファイル名|*]</span>
     </dt>
     <dd>「<a href="hid00052.htm">ファイル名検索</a>」ダイアログを開きます。<br>
       マスク、検索語、日付、サイズ、属性の条件にマッチするファイルを検索できます。結果リストに対する絞り込み検索も可能です。<br>
@@ -1510,6 +1510,7 @@ nyanfi_imgview.jpg 129,806 800 × 600  (4 : 3)
       <div class="spc_box">
         パラメータに<b>リストファイル名</b>を指定すると(ドライブ名がない場合は <b>NyanFi</b>
         ディレクトリからの相対指定)、それに記述されているディレクトリが検索対象となります。これによって、任意の複数ディレクトリ内を一括検索できます。<br>
+        リストファイル名の代わりに <b>*</b> を指定すると、リストファイルの選択ダイアログが表示されます。<br>
         リストファイルには、検索したいパス付きディレクトリ名(環境変数も使用可)が一行ずつ記述してください。<b>;</b>
         (セミコロン)で始まる行や空行は無視されます。また行にタブ文字が含まれている場合、それ以降の内容は無視されます。したがってワークリストや検索結果リストを保存したものでもかまいません。ディレクトリ名末尾の
         "<b>\</b>" は無くても可、(ディレクトリとして存在しない)ファイル名はスキップします。<br>
@@ -1734,8 +1735,8 @@ NyanFi.exe -Ld:\hoge -CL -XGrep_"にゃぁ":GrepSetMask_*.txt:GrepStart
         ・<b>1マッチ</b> では行番号や行内容は取得されません。ファイル名だけが表示されます。<br>
         ・ディレクトリの深さは指定できません。<br>
         ・UTF-8 以外のファイルでは、日本語を検索できません。<br>
-        ・検索の進捗状況は表示されず、中断もできません。<br>
-        ・正規表現はPerl互換(PCRE)ではなく、拡張正規表現(POSIX)になります(\d については内部で [0-9] に変換)。<br>
+        ・検索の進捗状況は表示されません。<br>
+        ・正規表現はPerl互換(PCRE)ではなく、拡張正規表現(ERE)になります(\d については内部で [0-9] に変換)。<br>
         ・<b>xd2txlib.dll</b> によるバイナリ文書の検索はできません。<br>
       </div>
     </dd>
@@ -3114,7 +3115,7 @@ NyanFi.exe -XRegExChecker
 
     <dt id="SaveAsFindSet">SaveAsFindSet</dt>
     <dd>
-      カレントが検索結果リストの場合、その検索設定に名前を付けて保存します。<br>
+      カレントが検索結果リストの場合、その検索設定(選択やリストファイルによるディレクトリ指定を含む)に名前を付けて保存します。<br>
       保存したファイルは、<a href="#LoadFindSet">LoadFindSet</a> コマンドで読み込んで検索を実行できます。<br>
       <a href="hid00019.htm#OpenStandard">オプション設定 - コマンド - OpenStandard</a> で「<b>検索設定</b>」をチェックしていると、<a href="#OpenStandard">OpenStandard</a> コマンドでも実行できます。<br>
 
