--- a/help/src/hid00061.htm
+++ b/help/src/hid00061.htm
@@ -17,7 +17,7 @@
   <h1>文字列置換</h1>
   <p>
     <a href="hid00005.htm#Grep">Grep</a> コマンドで開く <a href="hid00056.htm">文字列検索(GREP)</a>
-    画面で、上部のタブを切り替えることにより<b>文字列置換</b>を行えます。
+    画面で、上部のタブを切り替えることにより<b>文字列置換</b>を行えます。<br>
   </p>
 
   <h2 id="Replace">文字列置換</h2>
@@ -30,31 +30,41 @@
     結果リストでは、文字列検索の場合と同様に、カーソル移動やファイル編集などが可能です。<br>
     なお置換の場合、置換結果の強調表示はされません。また、結果リストの行番号は置換前のものですので、置換文字列に改行が含まれていると、置換後の行とはずれてきます。
   </p>
+  <hr class="light">
 
   <dl>
     <dt class="no_bg_indent1">検索文字列 <img src="edit.png" alt=""></dt>
-    <dd>検索したい文字列を指定してください。特殊文字として <b>\t</b>、<b>\s</b>、<b>\\</b>が使えます。</dd>
+    <dd>
+      検索したい文字列を指定してください。特殊文字として <b>\t</b>、<b>\s</b>、<b>\\</b>が使えます。<br>
+      なお、<b>検索文字列</b>または次の<b>置換文字列</b>にフォーカスがある場合、<span class="btn_frame">Ctrl</span>+<span class="btn_frame">R</span>で <a href="#RegEx">正規表現</a>、<span class="btn_frame">Ctrl</span>+<span class="btn_frame">U</span>で <a href="#CaseSens">大小区別</a>、<span class="btn_frame">Ctrl</span>+<span class="btn_frame">W</span>で <a href="#Word">単語</a> のチェック状態を切り替えられます。
+    </dd>
 
     <dt class="no_bg_indent1">置換文字列 <img src="edit.png" alt=""></dt>
-    <dd>検索したい文字列を指定してください。特殊文字として <b>\t</b>、<b>\n</b>、<b>\s</b>、<b>\\</b>が使えます。<br>
+    <dd>
+      検索したい文字列を指定してください。特殊文字として <b>\t</b>、<b>\n</b>、<b>\s</b>、<b>\\</b>が使えます。<br>
       空欄の場合は、マッチした文字列が削除されます。<br>
     </dd>
 
-    <dt class="no_bg_indent1"><img src="chkbox.png" alt=""> 正規表現</dt>
+    <dt class="no_bg_indent1" id="RegEX"><img src="chkbox.png" alt=""> 正規表現</dt>
     <dd>置換に正規表現(PCRE)を用います。なお、検索文字列欄の右クリックメニューから、正規表現を参照したり<a href="hid00085.htm">正規表現チェッカー</a>を開いたりできます。<br>
       入力内容が正しくない場合、検索欄を囲むエラー色の枠が表示されて<span
         class="btn_frame">開始</span>ボタンを押せません。<br>
     </dd>
 
-    <dt class="no_bg_indent1"><img src="chkbox.png" alt=""> 大小区別</dt>
+    <dt class="no_bg_indent1" id="CaseSens"><img src="chkbox.png" alt=""> 大小区別</dt>
     <dd>大文字・小文字を区別して検索します。</dd>
 
-    <dt class="no_bg"><img src="chkbox.png" alt=""> 単語</dt>
+    <dt class="no_bg_indent1" id="Word"><img src="chkbox.png" alt=""> 単語</dt>
     <dd>単語単位で検索します。検索文字列は英単語境界でのみ一致します。</dd>
+
+    <dd>
+      結果リスト以外にフォーカスがある場合、<span class="btn_frame">Ctrl</span>+<span class="btn_frame">R</span>で<b>正規表現</b>、<span class="btn_frame">Ctrl</span>+<span class="btn_frame">U</span>で<b>大小区別</b>、<span class="btn_frame">Ctrl</span>+<span class="btn_frame">W</span>で<b>単語</b>のチェック状態を切り替えられます。<br>
+    </dd>
 
     <dt class="no_bg_indent1"><img src="chkbox.png" alt=""> 確認あり</dt>
     <dd>置換を行う前に確認ダイアログが表示されます。そこで「<b>全て置換</b>」を選ぶと、以降の全ファイルに対して確認なしで置換が実行されます。</dd>
   </dl>
+  <hr class="light">
   <br>
 
   <p id="Option">
