--- a/help/src/hid00090.htm
+++ b/help/src/hid00090.htm
@@ -7,6 +7,7 @@
   <link rel="stylesheet" type="text/css" href="help.css">
   <object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
 	<param name="Keyword" value="blame">
+	<param name="Keyword" value="ERE">
 	<param name="Keyword" value="FileEdit">
 	<param name="Keyword" value="Git">
 	<param name="Keyword" value="Git for Windows">
@@ -150,9 +151,12 @@
           <b>検索文字列</b> 欄には、通常の文字列の他に -e hege --and -e nyan のようなパターンも指定できます。<br>
           空白で区切って複数の単語を入力すると内部で -e hoge --or -e nyan ～ に変換されOR検索になります。<br>
           UTF-8のファイルのでは日本語の検索も可能です｡<br>
-          <img src="chkbox.png" alt=""> <b>正規表現</b> をチェックしていると、拡張正規表現(POSIX)になります。NyanFi が利用する Perl互換正規表現(PCRE)とは一部異なりますので注意してくださ。\d については内部で [0-9] に変換して渡されます。<br>
+          <img src="chkbox.png" alt=""> <b>正規表現</b> をチェックしていると、拡張正規表現(ERE)になります。NyanFi が利用する Perl互換正規表現(PCRE)とは一部異なりますので注意してくださ。\d については内部で [0-9] に変換して渡されます。<br>
           実行したコマンドの内容は、ステータスバーで確認できます。<br>
           <a href="hid00056.htm">文字列検索(GREP)</a>のように細かな出力設定はできませんが、ほぼ同様の操作が可能です。また、かなり高速です。<br>
+          <span class="btn_frame">開始</span>ボタンで検索がはじまります。検索を中断したい場合は<span
+          class="btn_frame">ESC</span>キーを押してください。<br>
+    
           <div class="info_text">
           このウィンドウは、ファイラーからGit作業ディレクトリ内で <a href="hid00005.htm#GitGrep">GitGrep</a> コマンドを実行することによっても開けます。その場合、ファイラーのカレントが作業ディレクトリとなります。<br>
           </div>
