--- a/help/src/hid00005.htm
+++ b/help/src/hid00005.htm
@@ -1738,6 +1738,10 @@ NyanFi.exe -Ld:\hoge -CL -XGrep_"にゃぁ":GrepSetMask_*.txt:GrepStart
         ・検索の進捗状況は表示されません。<br>
         ・正規表現はPerl互換(PCRE)ではなく、拡張正規表現(ERE)になります(\d については内部で [0-9] に変換)。<br>
         ・<b>xd2txlib.dll</b> によるバイナリ文書の検索はできません。<br>
+        ・<b>フィルタ</b>による検索対象の絞り込みはできません。<br>
+      </div>
+      <div class="spc_box">
+        なお、<a href="hid00061.htm">文字列置換</a>タブは <a href="#Grep">Grep</a> と同じです。<br>
       </div>
     </dd>
 
