--- a/help/src/hid00109.htm
+++ b/help/src/hid00109.htm
@@ -37,6 +37,19 @@
   </div>
 
   <dl>
+    <dt>V16.17 <span class="ver_date">(2024-01-14)</span></dt>
+    <dd>
+      ・文字列検索(GREP)で利用できるフィルタとして HtmlBody (HTMLの body 要素内の行を検索)、HtmlRem (HTMLのコメント部分を検索)、DfmObj (.dfm ファイルで指定オブジェクトのプロパティ値を検索)を追加。<br>
+      ・文字列置換でも、検索文字列の前にフィルタを指定できるようにしました。利用できるのは、行単位のフィルタ(Head、Tail、HtmlHead、HtmlBody、HtmlRem)です。HtmlRem については、コメントを含む行全体が検索対象となります。<br>
+      ・文字列検索/置換でフィルタの指定に誤りがある場合、検索文字列欄をエラー枠で囲み開始できないようにしました。<br>
+      ・文字列置換の結果リストで、置換された部分の背景を強調色の補色で表示するようにしました。<br>
+      ・結果リストで、(サブディレクトリ名/)ファイル名が長すぎる場合、一部を省略するようにしました。なお、「結果リストにサブディレクトリ名を表示」が無効でも、スティッキーにサブディレクトリ名が表示されていたのを修正。<br>
+      ・文字列検索のフィルタ欄の内容が変化したとき、50m秒待機してから処理を行うようにしました(IME確定時の対策)。<br>
+      ・SubStr フィルタを適用して文字列検索を行った場合、指定範囲外の語も強調表示されていたのを修正。<br>
+      ・文字列検索で「タグ除外」が有効な場合、HTMLタグの途中で改行されていると除外されなかったのを修正。<br>
+      ・文字列検索の「次行表示」がチェックされていない状態で文字列置換を行った場合、置換文字列に改行が含まれていると、結果リストに改行以降の内容が表示されなかったのを修正。<br>
+    </dd>
+
     <dt>V16.16 <span class="ver_date">(2024-01-12)</span></dt>
     <dd>
       ・FindFileDlg コマンドのパラメータに * を指定すると、リストファイルの選択ダイアログが表示されるようにしました。<br>
