--- a/help/src/hid00061.htm
+++ b/help/src/hid00061.htm
@@ -16,19 +16,19 @@
 
   <h1>文字列置換</h1>
   <p>
-    <a href="hid00005.htm#Grep">Grep</a> コマンドで開く <a href="hid00056.htm">文字列検索(GREP)</a>
-    画面で、上部のタブを切り替えることにより<b>文字列置換</b>を行えます。<br>
+    <a href="hid00005.htm#Grep">Grep</a>/<a href="hid00005.htm#Grep2">Grep2</a> コマンドで開く <a href="hid00056.htm">文字列検索(GREP)</a>画面で、上部のタブを<span class="tab_frame">置換</span>に切り替えると<b>文字列置換</b>を行えます。<br>
   </p>
 
   <h2 id="Replace">文字列置換</h2>
   <p>
-    上部のタブを<span class="tab_frame">置換</span>に切り替えると、検索対象のテキストファイルに対して文字列置換を行えます。<br>
+    検索対象のテキストファイルに対して文字列置換を行います。<br>
     必用に応じて後述の項目を設定してください。<br>
     カレントで選択項目がある場合は、それらが対象となります。また非表示の項目は対象から外されます。<br>
   </p>
   <p>
     結果リストでは、文字列検索の場合と同様に、カーソル移動やファイル編集などが可能です。<br>
-    なお置換の場合、置換結果の強調表示はされません。また、結果リストの行番号は置換前のものですので、置換文字列に改行が含まれていると、置換後の行とはずれてきます。
+    置換された部分の背景は、強調色の補色で表示されます。<br>
+    なお、結果リストの行番号は置換前のものですので、置換文字列に改行が含まれていると、置換後の行とはずれていきます。
   </p>
   <hr class="light">
 
@@ -37,6 +37,39 @@
     <dd>
       検索したい文字列を指定してください。特殊文字として <b>\t</b>、<b>\s</b>、<b>\\</b>が使えます。<br>
       なお、<b>検索文字列</b>または次の<b>置換文字列</b>にフォーカスがある場合、<span class="btn_frame">Ctrl</span>+<span class="btn_frame">R</span>で <a href="#RegEx">正規表現</a>、<span class="btn_frame">Ctrl</span>+<span class="btn_frame">U</span>で <a href="#CaseSens">大小区別</a>、<span class="btn_frame">Ctrl</span>+<span class="btn_frame">W</span>で <a href="#Word">単語</a> のチェック状態を切り替えられます。
+
+      <div class="spc_box">
+        <b>フィルタによる検索対象の絞り込み:</b><br>
+        <b>&gt;</b><span class="pram_text">フィルタ1[|フィルタ2...]</span><b>&gt;</b> <span class="pram_text">検索文字列</span><br>
+        という書式で<b>フィルタ</b>を指定することで、検索対象を絞り込めます(Grep2 では利用不可)。<br>
+        文字列置換で利用できるのは、行単位で絞り込みを行うフィルタだけです。<br>
+        | で区切って複数のフィルタを指定すると、それらが順に適用されます。なお、フィルタ名の大文字・小文字は区別されません。<br>
+        <dl>
+          <dt class="no_bg">Head<span class="pram_text">(行数)</span></dt>
+          <dd>
+            ファイルの先頭から指定した行数だけを検索します。<br>
+          </dd>
+          <dt class="no_bg">Tail<span class="pram_text">(行数)</span></dt>
+          <dd>
+            ファイルの最後から指定した行数だけを検索します。<b>Head</b> と組み合わせることで範囲指定も可能です。<br>
+          </dd>
+          <dt class="no_bg">HtmlHead</dt>
+          <dd>
+            HTML文書で、head 要素内の行を検索します。<br>
+          </dd>
+          <dt class="no_bg">HtmlBody</dt>
+          <dd>
+            HTML文書で、body 要素内の行を検索します。<br>
+          </dd>
+          <dt class="no_bg">HtmlRem</dt>
+          <dd>
+            HTML文書で、コメントを含む行を検索します。<br>
+            <div class="note_text">
+              文字列検索(GREP)とは異なり、行の一部がコメントになっている場合も、その行全体が検索対象になります。<br>
+            </div>
+          </dd>
+          </dl>
+      </div>
     </dd>
 
     <dt class="no_bg_indent1">置換文字列 <img src="edit.png" alt=""></dt>
